kubeflow/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubeflow-ingress
  namespace: istio-system
  annotations:
    nginx.org/websocket-services: "istio-ingressgateway"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.org/client-max-body-size: "0"
spec:
  ingressClassName: nginx
  rules:
    ## Internal
    #- host: dasboard.ai.inesdata.upm
    #  http:
    #    paths:
    #      - backend:
    #          service:
    #            name: istio-ingressgateway
    #            port:
    #              number: 80
    #        path: /
    #        pathType: Prefix
    ## External
    - host: kubeflow.ai.inesdata-project.eu
      http:
        paths:
          - backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 80
            path: /
            pathType: Prefix
    - host: kserve.ai.inesdata-project.eu
      http:
        paths:
          - backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 80
            path: /
            pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  namespace: auth
  annotations:
    cert-manager.io/cluster-issuer: "keycloak-cluster-issuer"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "512k"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - keycloak-admin.ai.inesdata.upm
        ## Internal
        #- keycloak.ai.inesdata.upm
        ## External
        - keycloak.ai.inesdata-project.eu
      secretName: keycloak-cert
  rules:
    ## Admin panel
    - host: keycloak-admin.ai.inesdata.upm
      http:
        paths:
          - backend:
              service:
                name: keycloak
                port:
                  number: 8080
            path: /auth
            pathType: Prefix
    ## Internal access
    # Keycloak
    #- host: keycloak.ai.inesdata.upm
    #  http:
    #    paths:
    #      - backend:
    #          service:
    #            name: keycloak
    #            port:
    #              number: 8080
    #        path: /auth
    #        pathType: Prefix
    ## External access
    # Keycloak
    - host: keycloak.ai.inesdata-project.eu
      http:
        paths:
          - backend:
              service:
                name: keycloak
                port:
                  number: 8080
            path: /auth
            pathType: Prefix
